--- a/_config.yml
+++ b/_config.yml
@@ -18,16 +18,14 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Your awesome title
-email: your-email@example.com
+title: This Umreekan Life Blog
+email: thisumreekanlife@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: jekyllrb
-github_username:  jekyll
+  This Umreekan Life is a podcast where we have discussion on various aspects of the desi immigrant life.
+baseurl: "/" # the subpath of your site, e.g. /blog
+url: "https://thisumreekanlife.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+twitter_username: thisumreekanlife
+github_username:  thisumreekanlife
 
 # Build settings
 theme: minima
