--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "https://thisumreekanlife.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: thisumreekanlife
-github_username:  thisumreekanlife
+instagram_username:  thisumreekanlife
 
 # Build settings
 theme: minima
